2015-03-04  Peter Stephenson  <p.stephenson@samsung.com>

	* 34641: Src/lex.c, Test/A02alias.ztst: make it possible to
	alias tokens.

	* Daniel Shahaf: 34640: Doc/Zsh/compsys.yo: clarify
	documentation for _guard function.

2015-03-03  Peter Stephenson  <p.stephenson@samsung.com>

	* Matthew Martin: 34637: Completion/BSD/Command/_mixerctl:
	new completion.

2015-02-28  Barton E. Schaefer  <schaefer@zsh.org>

	* users/19934: Doc/Zsh/params.yo: document %D{...} for WATCHFMT

2015-02-27  Barton E. Schaefer  <schaefer@zsh.org>

	* 34634: Src/glob.c: avoid infinite recursion on (/)# extendedglob

2015-02-27  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 34588: Completion/Unix/Command/_user_admin: Complete
	'usermod -a'

2015-02-23  Peter Stephenson  <p.stephenson@samsung.com>

	* 34623: Src/hist.c: free history more often in previous case.

2015-02-23  Mikael Magnusson  <mikachu@gmail.com>

	* 34615 + 34619: Src/hist.c: Remeta one frame earlier

2015-02-22  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 34606: Src/subst.c, Test/C01arith.ztst: fix up arithmetic
	nested in parameter substitution.

	* 34604: Src/hist.c: Work around problem with changes in Meta
	affecting history file when read in.

2015-02-21  Barton E. Schaefer  <schaefer@zsh.org>

	* 34597: Doc/Zsh/mod_datetime.yo: Revise strftime description to
	correctly explain timezone handling and note signed int rollover

2015-02-20  Barton E. Schaefer  <schaefer@zsh.org>

	* 34590: Src/exec.c, Src/text.c: queue_signals() around more
	scopes that manipulate global state

2015-02-20  Peter Stephenson  <p.stephenson@samsung.com>

	* 34587: Src/utils.c, Test/D07multibyte.ztst: ensure multibyte
	characters don't overflow into tokens and add test.

2015-02-19  Barton E. Schaefer  <schaefer@zsh.org>

	* 34568: Src/Module.c: use META_HEAPDUP when passing dlerror()
	string to metafy()

2015-02-19  Peter Stephenson  <p.stephenson@samsung.com>

	* unposted: Config/version.mk: Mikael says it's 2015,
	apparently.
